--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "07-restserver",
     "version": "1.0.0",
+    "engines": {
+        "node": "10.16.0"
+    },
     "description": "",
     "main": "index.js",
     "scripts": {
@@ -10,7 +13,11 @@
     "author": "Oldahir Gomez",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^3.0.6",
         "body-parser": "^1.19.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "mongoose": "^5.7.1",
+        "mongoose-unique-validator": "^2.0.3",
+        "underscore": "^1.9.1"
     }
 }
